@@ -34,6 +34,11 @@ GtkWidget*		menuhelp;
 
 GtkWidget*		menubookmark;
 GtkWidget*		menubookmarksub;
+GtkWidget*		menuprint;
+GtkWidget*		menuclose;
+GtkWidget*		menucloseall;
+GtkWidget*		menusaveall;
+GtkWidget*		menurevert;
 
 GtkWidget*		redoMenu;
 GtkWidget*		undoMenu;
