@@ -193,7 +193,7 @@ int main(int argc,char **argv)
 #endif
 			unique_app_watch_window(app,(GtkWindow*)window);
 			g_signal_connect(app,"message-received",G_CALLBACK(messageReceived),NULL);
-
+			setSensitive();
 			gtk_main();
 		}
 }
